# additional-cpca-experiments

./: .gitignore  README.md  outfile-task-11-ndim-2.yaml  outfile-task-11.yaml  outfile-task-167140-ndim-2.yaml  outfile-task-3560-ndim-2.yaml  outfile-task-3573-ndim-2.yaml  outfile-task-53-ndim-2.yaml  outfile-task-53.yaml  outfile.yaml  pyproject.toml  requirements.txt
notebooks/: Access-Imagenet.ipynb  Beans_Dataset_Experiment.ipynb  CIFAR-10-Dataset.ipynb  CPCA_Additional_Experiment_Breast_Cancer.ipynb  CPCA_Additional_Experiment_Iris_Dataset.ipynb  CPCA_Additional_Experiment_MNIST.ipynb  CPCA_Additional_Experiment_Wine_Dataset.ipynb  Mouse-Dataset-Experiments.ipynb
notebooks/.ipynb_checkpoints/: Beans-checkpoint.ipynb  Beans_Dataset_Experiment-checkpoint.ipynb  CPCA_Additional_Experiment_Breast_Cancer-checkpoint.ipynb  Sentiment Analysis-checkpoint.ipynb
notebooks/archive_from_2024/: Access-Imagenet.ipynb  Beans_Dataset_Experiment.ipynb  CIFAR-10-Dataset.ipynb  CPCA_Additional_Experiment_Breast_Cancer.ipynb  CPCA_Additional_Experiment_Iris_Dataset.ipynb  CPCA_Additional_Experiment_MNIST.ipynb  CPCA_Additional_Experiment_Wine_Dataset.ipynb  Mouse-Dataset-Experiments.ipynb  Sentiment Analysis.ipynb
notebooks/tabpfn_results/: cpca-for-tabpfn.ipynb  exploring-openml.ipynb
results/archive/: outfile-task-53.yaml
results/final/: outfile-task-11-ndim-2.yaml
scripts/experiments/: run_batch_1.sh
src/cpca_exp/: experiments.py  run_experiment.py
